--- a/src/style2.css
+++ b/src/style2.css
@@ -34,6 +34,10 @@ ul {
   justify-content: flex-start;
   padding: 0;
 }
+footer {
+  text-align: center;
+  max-width: 540px;
+}
 .weather-app-outline {
   border-width: 4px;
   background: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
