--- a/src/style2.css
+++ b/src/style2.css
@@ -34,16 +34,17 @@ ul {
   justify-content: flex-start;
   padding: 0;
 }
-footer {
-  text-align: center;
-  max-width: 540px;
+.footer {
+  max-width: 450px;
+  margin: 0 auto;
+  text-decoration: none;
 }
 .weather-app-outline {
   border-width: 4px;
   background: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
-  max-width: 40%;
+  max-width: 450px;
+  margin: 20px auto;
   margin-top: 20px;
-  margin-bottom: 20px;
   border: 4px solid #ececec;
 }
 .Celcius-Farenheit {
