--- a/src/style2.css
+++ b/src/style2.css
@@ -34,18 +34,15 @@ ul {
   justify-content: flex-start;
   padding: 0;
 }
-.footer {
-  max-width: 450px;
-  margin: 0 auto;
-  text-decoration: none;
-}
+
 .weather-app-outline {
+  max-width: 400px;
+  margin: 20px auto;
+}
+.card-body {
+  border: 4px solid #ececec;
   border-width: 4px;
   background: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
-  max-width: 450px;
-  margin: 20px auto;
-  margin-top: 20px;
-  border: 4px solid #ececec;
 }
 .Celcius-Farenheit {
   margin-top: 5px;
@@ -63,6 +60,9 @@ ul {
   color: black;
   border-color: rgba(0, 0, 0, 0.125);
   padding: 2px 5px;
+}
+.description {
+  text-transform: capitalize;
 }
 .rain-wind {
   margin-top: 30px;
