--- a/src/style2.css
+++ b/src/style2.css
@@ -26,6 +26,9 @@ h2 {
 h1 {
   font-size: 80px;
 }
+h1 span {
+  font-size: 40px;
+}
 h2 {
   font-size: 50px;
 }
@@ -49,10 +52,7 @@ ul {
   justify-content: flex-end;
 }
 .current-location-button {
-  font-size: 12px;
   border-radius: 10px;
-  padding: 5px 8px;
-  border: 0;
 }
 .unit-button {
   background-color: #eaf6f6;
