--- a/src/style2.css
+++ b/src/style2.css
@@ -37,22 +37,24 @@ ul {
   justify-content: flex-start;
   padding: 0;
 }
-
+h1 .units {
+  font-size: 50px;
+  position: relative;
+  top: -30px;
+}
 .weather-app-outline {
   max-width: 400px;
-  margin: 20px auto;
+  margin: 20px auto 10px;
 }
 .card-body {
   border: 4px solid #ececec;
   border-width: 4px;
   background: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
+  padding: 20px 15px;
 }
 .Celcius-Farenheit {
   margin-top: 5px;
   justify-content: flex-end;
-}
-.current-location-button {
-  border-radius: 10px;
 }
 .unit-button {
   background-color: #eaf6f6;
@@ -63,13 +65,11 @@ ul {
 }
 .description {
   text-transform: capitalize;
+  font-size: 20px;
 }
 .rain-wind {
   margin-top: 30px;
 }
 .day-time {
   margin-top: 7px;
-}
-.card-body {
-  padding: 20px 15px 35px;
 }
